[package]
name = "wait-free-arena"
version = "0.1.0"
edition = "2024"

[features]
default = ["std", "boxed", "allocator_api", "memory_reuse"]
std = ["alloc"]
alloc = []
allocator_api = ["alloc"]
boxed = []
memory_reuse = ["alloc"]

[dependencies]
cfg-if = "1.0.3"
thiserror = { version = "2.0.16", default-features = false }
